tests/out/error/if/branch_wrong_return.in.bt
x := if false { 'string' } else { 123 }
